Migrate project to Gradle